--- a/app/src/main/res/layout/chatting_item_redpacket_from.xml
+++ b/app/src/main/res/layout/chatting_item_redpacket_from.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
    Copyright (c) 2013 The CCP project authors. All Rights Reserved.
 
    Use of this source code is governed by a Beijing Speedtong Information Technology Co.,Ltd license
@@ -14,19 +13,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:emojicon="http://schemas.android.com/apk/res-auto"
     style="@style/ChattingUIContent"
-    android:layout_below="@+id/chatting_time_tv" >
+    android:layout_below="@+id/chatting_time_tv">
 
     <include layout="@layout/chatting_item_avatar_from" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/chatting_user_tv"
             style="@style/ChattingUISenderText"
             android:visibility="gone" />
+
         <RelativeLayout
             android:id="@+id/bubble"
             android:layout_width="210dp"
@@ -56,6 +56,17 @@
                 <TextView
                     android:id="@+id/tv_sponsor_name"
                     style="@style/RedPacketSponsorStyle" />
+
+                <TextView
+                    android:id="@+id/tv_packet_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="3dp"
+                    android:textColor="#D24F44"
+                    android:textSize="12sp"
+                    android:visibility="gone" />
 
                 <ImageView style="@style/RedPacketSponsorIconStyle" />
             </RelativeLayout>
