--- a/redpacketlibrary/res/values/values.xml
+++ b/redpacketlibrary/res/values/values.xml
@@ -265,8 +265,8 @@
     <string name="name_str_format_send">%1$s共发出</string>
     <string name="no_network_connected">未连接到网络，请稍后重试</string>
     <string name="no_verify">未验证</string>
-    <string name="operation_tpy_agreement">我愿意免费投保太平洋保险《个人账户资金损失保险》，保险费用由环信承担</string>
-    <string name="operation_user_agreement">该操作代表我同意《环信用户服务协议》</string>
+    <string name="operation_tpy_agreement">我愿意免费投保太平洋保险《个人账户资金损失保险》，保险费用由容联承担</string>
+    <string name="operation_user_agreement">该操作代表我同意《容联用户服务协议》</string>
     <string name="pay_bank_card">支付银行卡</string>
     <string name="pay_card">支付卡</string>
     <string name="pay_no_pwd">本次交易免密码</string>
@@ -313,7 +313,7 @@
     <string name="str_upload">上传</string>
     <string name="str_withdraw">提现</string>
     <string name="str_your_withdraw_cash_card">您的提现银行卡信息</string>
-    <string name="subtitle_content">环信红包服务</string>
+    <string name="subtitle_content">容联红包服务</string>
     <string name="tip_money_count_limit">一次最多发100个红包</string>
     <string name="tip_money_count_zero">请输入红包个数</string>
     <string name="title_add_bankcard">添加银行卡</string>
