--- a/redpacketlibrary/res/layout/rp_card_list_item.xml
+++ b/redpacketlibrary/res/layout/rp_card_list_item.xml
@@ -6,14 +6,14 @@
               android:orientation="vertical"
     >
 
-    <com.yunzhanghu.redpacketui.cardview.CardView
-        android:id="@+id/cardView"
+    <com.yunzhanghu.redpacketui.widget.RPRoundCard
+        android:id="@+id/roundCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/size36px"
         android:layout_marginLeft="@dimen/size30px"
         android:layout_marginRight="@dimen/size30px"
-        app:RPcardCornerRadius="@dimen/size15px"
+        app:RPCardRadius="@dimen/size15px"
         >
 
         <RelativeLayout
@@ -76,7 +76,7 @@
                 android:textSize="@dimen/font90px"
                 />
         </RelativeLayout>
-    </com.yunzhanghu.redpacketui.cardview.CardView>
+    </com.yunzhanghu.redpacketui.widget.RPRoundCard>
 
     <LinearLayout
         android:id="@+id/layout_remove_card"
