--- a/redpacketlibrary/res/layout/rp_fragment_single_packet_detail.xml
+++ b/redpacketlibrary/res/layout/rp_fragment_single_packet_detail.xml
@@ -41,7 +41,7 @@
         android:gravity="center"
         android:text="@string/check_money_records"
         android:textColor="@color/check_blue"
-        android:textSize="@dimen/size45px"
+        android:textSize="@dimen/font45px"
         />
 
 </RelativeLayout>
