增加转账功能

--- a/redpacketlibrary/res/layout/rp_choose_pay_list_item.xml
+++ b/redpacketlibrary/res/layout/rp_choose_pay_list_item.xml
@@ -19,7 +19,7 @@
         <ImageView
             android:id="@+id/iv_pay_icon"
             style="@style/PayTypeIconStyle"
-            android:src="@drawable/rp_jd_icon"
+            android:src="@drawable/rp_hf_icon"
             />
 
         <LinearLayout
