--- a/redpacketlibrary/res/layout/rp_pay_add_card_dialog.xml
+++ b/redpacketlibrary/res/layout/rp_pay_add_card_dialog.xml
@@ -25,6 +25,7 @@
     <View style="@style/DividerStyle"/>
 
     <TextView
+        android:id="@+id/tv_add_card_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size60px"
