--- a/redpacketlibrary/res/values/rp_colors.xml
+++ b/redpacketlibrary/res/values/rp_colors.xml
@@ -15,6 +15,7 @@
     <color name="text_yellow">#FEE94E</color>
     <color name="text_blue">#35b7f3</color>
     <color name="msg_red">#a11710</color>
+    <color name="title_red">#e8584d</color>
     <color name="best_luck_yellow">#fabf40</color>
     <color name="check_blue">#167ffc</color>
     <color name="button_blue">#35B7F3</color>
