--- a/redpacketlibrary/res/values/rp_strings.xml
+++ b/redpacketlibrary/res/values/rp_strings.xml
@@ -9,6 +9,10 @@
     <string name="btn_put_money">塞钱进红包</string>
     <string name="greetings_hint">打赏你哒!</string>
     <string name="send_money_title">发红包</string>
+    <string name="transfer_money_title">转账给朋友</string>
+    <string name="transfer_detail_title">转账详情</string>
+    <string name="transfer_money">转账</string>
+    <string name="transfer_amount">转账金额</string>
     <string name="title_send_group_money">发群红包</string>
     <string name="dialog_title_pay">支付</string>
     <string name="red_money">红包</string>
@@ -31,7 +35,7 @@
     <string name="operation_user_agreement_default">该操作代表我同意《用户服务协议》</string>
     <string name="operation_tpy_agreement">我愿意免费投保太平洋保险《个人账户资金损失保险》</string>
     <string name="title_amount_agreement">个人账户资金损失保险</string>
-    <string name="jd_pay_agreement_hint">银行卡付款业务由京东支付支持</string>
+    <string name="jd_pay_agreement_hint">银行卡付款业务由恒丰支付支持</string>
     <string name="insurance_agreement_hint">因账户被盗导致的资金损失由太平洋保险提供赔付保障</string>
     <string name="edit_bankcard_hint">请输入您本人的银行卡卡号</string>
     <string name="edit_card_name_hint">持卡人姓名</string>
@@ -60,6 +64,9 @@
     <string name="common_error_msg">抱歉，系统出错了!\n请点击屏幕重试~</string>
     <string name="common_no_network_msg">暂未连接上网络!\n请连接后点击屏幕重试~</string>
     <string name="btn_str_send_sms_code">发送验证码</string>
+    <string name="input_transfer_amount">请输入转账金额</string>
+    <string name="input_transfer_limited_minimum">单笔转账金额不能少于%1$s元</string>
+    <string name="input_transfer_limited">单笔转账金额不能超过%1$s元</string>
     <string name="input_money_amount">请输入红包金额</string>
     <string name="input_money_limited_minimum">单个红包金额不能少于%1$s元</string>
     <string name="input_money_limited">单个红包金额不能超过%1$s元</string>
@@ -74,6 +81,7 @@
     <string name="load_more_end">没有更多了</string>
     <string name="money_record_title">收到的红包</string>
     <string name="input_money_zero">红包金额不能为0</string>
+    <string name="input_transfer_zero">转账金额不能为0</string>
     <string name="default_money_greeting">恭喜发财，大吉大利！</string>
     <string name="no_network_connected">未连接到网络，请稍后重试</string>
     <string name="name_str_format_received">%1$s共收到</string>
@@ -88,7 +96,7 @@
     <string name="send_you_money">给你发了个红包</string>
     <string name="send_who_money">给%1$s发了个红包</string>
     <string name="money_expired_str">超过1天未领取，红包已过期</string>
-    <string name="jd_pay_title">京东支付</string>
+    <string name="jd_pay_title">恒丰支付</string>
     <string name="money_qa_title">帮助</string>
     <string name="forget_pwd_title">找回密码</string>
     <string name="loading_msg">加载中...</string>
@@ -190,7 +198,7 @@
     <string name="hint_title">提示</string>
     <string name="limit_hint_title">支付超限</string>
     <string name="single_limit_msg">单日红包发出金额超限，剩余额度%1$s元，请修改红包金额。</string>
-    <string name="jd_limit_msg">零钱不足。%1$s尾号%2$s京东支付今日剩余额度%3$s元，请修改红包金额。</string>
+    <string name="jd_limit_msg">零钱不足。%1$s尾号%2$s恒丰支付今日剩余额度%3$s元，请修改红包金额。</string>
     <string name="single_out_msg">单日红包发出金额已达上限。</string>
     <string name="sms_error_title">验证码输入错误</string>
     <string name="sms_error_msg">重新输入，或者等倒计时结束后重新获取一个再试。</string>
@@ -248,5 +256,11 @@
     <string name="single_withdraw_min_limit">单笔提现最少%1$s元</string>
     <string name="str_choose_camera">选择相机</string>
     <string name="str_choose_album">选择相册</string>
+    <string name="transfer_success">交易成功</string>
+    <string name="transfer_change">已存入零钱</string>
+    <string name="transfer_see_change">查看零钱</string>
+    <string name="transfer_time">转账时间</string>
+    <string name="transfer_high">当日最高转账金额为</string>
+    <string name="transfer_parameter">参数有误,请检查!</string>
 
 </resources>
