--- a/redpacketlibrary/res/layout/rp_activity_transfer_detail.xml
+++ b/redpacketlibrary/res/layout/rp_activity_transfer_detail.xml
@@ -43,6 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
+            android:textColor="@color/text_black"
             android:layout_centerHorizontal="true"
             android:textSize="30sp"
             android:gravity="center"/>
@@ -51,6 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100.00"
+            android:textColor="@color/text_black"
             android:layout_centerHorizontal="true"
             android:textSize="30sp"
             android:gravity="center"/>
