--- a/redpacketlibrary/res/layout/rp_activity_transfer_detail.xml
+++ b/redpacketlibrary/res/layout/rp_activity_transfer_detail.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/iv_transfer_detail"
         android:text="@string/transfer_success"
+        android:textColor="@color/text_black"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"/>
     <LinearLayout
@@ -71,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/transfer_change"
+            android:textColor="@color/text_light_grey"
             android:layout_centerHorizontal="true"
             android:gravity="center"/>
         <TextView
@@ -81,7 +83,7 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:layout_marginLeft="5dp"
-            android:textColor="@color/check_blue"/>
+            android:textColor="@color/light_blue"/>
 
     </LinearLayout>
     <LinearLayout
@@ -97,6 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/transfer_time"
+            android:textColor="@color/text_light_grey"
             android:gravity="center"/>
         <TextView
             android:id="@+id/tv_transfer_detail_time"
@@ -104,6 +107,7 @@
             android:layout_height="wrap_content"
             android:text=""
             android:gravity="center"
+            android:textColor="@color/text_light_grey"
             android:layout_marginLeft="5dp"/>
 
     </LinearLayout>
