--- a/redpacketlibrary/res/layout/rp_fragment_change.xml
+++ b/redpacketlibrary/res/layout/rp_fragment_change.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/money_bg_color"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/money_bg_color">
 
     <LinearLayout
         android:id="@+id/change_top_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/top_red_color"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_change_tip"
@@ -22,8 +20,7 @@
             android:gravity="center"
             android:text="@string/str_my_change"
             android:textColor="@color/money_white"
-            android:textSize="@dimen/font42px"
-            />
+            android:textSize="@dimen/font42px" />
 
         <TextView
             android:id="@+id/tv_change_balance"
@@ -34,19 +31,16 @@
             android:gravity="center"
             android:text="￥-.--"
             android:textColor="@color/money_white"
-            android:textSize="@dimen/font129px"
-            />
+            android:textSize="@dimen/font129px" />
 
         <View
             style="@style/DividerStyle"
-            android:layout_marginTop="30dp"
-            />
+            android:layout_marginTop="30dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/size144px"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_change_recharge"
@@ -56,14 +50,12 @@
                 android:gravity="center"
                 android:text="@string/change_recharge"
                 android:textColor="@color/money_white"
-                android:textSize="@dimen/font51px"
-                />
+                android:textSize="@dimen/font51px" />
 
             <View
                 android:layout_width="1px"
                 android:layout_height="match_parent"
-                android:background="@color/divider_color"
-                />
+                android:background="@color/divider_color" />
 
             <TextView
                 android:id="@+id/tv_change_withdraw"
@@ -73,8 +65,7 @@
                 android:gravity="center"
                 android:text="@string/change_withdraw"
                 android:textColor="@color/money_white"
-                android:textSize="@dimen/font51px"
-                />
+                android:textSize="@dimen/font51px" />
 
         </LinearLayout>
     </LinearLayout>
@@ -86,28 +77,24 @@
         android:layout_below="@id/change_top_ll"
         android:layout_marginTop="@dimen/size48px"
         android:drawableLeft="@drawable/rp_change_details"
-        android:text="@string/change_detail"
-        />
+        android:text="@string/change_detail" />
 
     <View
         android:id="@+id/view_line_one"
         style="@style/DividerStyleNoHead"
-        android:layout_below="@id/tv_change_details"
-        />
+        android:layout_below="@id/tv_change_details" />
 
     <TextView
         android:id="@+id/tv_my_bankcard"
         style="@style/ChangeLeftTextViewStyle"
         android:layout_below="@id/view_line_one"
         android:drawableLeft="@drawable/rp_my_bankcard"
-        android:text="@string/my_bank_card"
-        />
+        android:text="@string/my_bank_card" />
 
     <View
         android:id="@+id/view_line_two"
         style="@style/DividerStyleNoHead"
-        android:layout_below="@id/tv_my_bankcard"
-        />
+        android:layout_below="@id/tv_my_bankcard" />
 
     <TextView
         android:id="@+id/tv_my_red_packet_records"
@@ -115,8 +102,7 @@
         android:layout_below="@id/view_line_two"
         android:layout_marginBottom="@dimen/size48px"
         android:drawableLeft="@drawable/rp_red_packet_records"
-        android:text="@string/my_money_records"
-        />
+        android:text="@string/my_money_records" />
 
     <RelativeLayout
         android:id="@+id/layout_verify_identity"
@@ -124,8 +110,7 @@
         android:layout_height="@dimen/size141px"
         android:layout_below="@id/tv_my_red_packet_records"
         android:background="@color/background_white"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
 
         <TextView
             android:layout_width="wrap_content"
@@ -136,8 +121,7 @@
             android:gravity="center_vertical"
             android:text="@string/verify_identity"
             android:textColor="@color/text_black"
-            android:textSize="@dimen/font48px"
-            />
+            android:textSize="@dimen/font48px" />
 
         <TextView
             android:id="@+id/tv_verify_identity"
@@ -151,38 +135,33 @@
             android:gravity="center_vertical"
             android:text="@string/no_verify"
             android:textColor="@color/text_light_grey"
-            android:textSize="@dimen/font48px"
-            />
+            android:textSize="@dimen/font48px" />
     </RelativeLayout>
 
     <View
         android:id="@+id/view_line_three"
         style="@style/DividerStyleNoHead"
         android:layout_below="@id/layout_verify_identity"
-        android:visibility="gone"
-        />
+        android:visibility="gone" />
 
     <TextView
         android:id="@+id/tv_forget_pay_pwd"
         style="@style/ChangeLeftTextViewStyle"
         android:layout_below="@id/view_line_three"
         android:drawableLeft="@drawable/rp_forget_pwd"
-        android:text="@string/str_forget_pay_pwd"
-        />
+        android:text="@string/str_forget_pay_pwd" />
 
     <View
         android:id="@+id/view_line_four"
         style="@style/DividerStyleNoHead"
-        android:layout_below="@id/tv_forget_pay_pwd"
-        />
+        android:layout_below="@id/tv_forget_pay_pwd" />
 
     <TextView
         android:id="@+id/tv_common_problem"
         style="@style/ChangeLeftTextViewStyle"
         android:layout_below="@id/view_line_four"
         android:drawableLeft="@drawable/rp_question_black"
-        android:text="@string/title_common_problem"
-        />
+        android:text="@string/title_common_problem" />
 
     <TextView
         android:id="@+id/tv_powered_by"
@@ -191,17 +170,13 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="@dimen/size36px"
         android:gravity="center"
-        android:text="@string/insurance_agreement_hint"
         android:textColor="@color/text_light_grey"
-        android:textSize="@dimen/font33px"
-        android:visibility="visible"
-        />
+        android:textSize="@dimen/font33px" />
 
     <LinearLayout
         android:id="@+id/target_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:orientation="vertical"
-        />
+        android:orientation="vertical" />
 </RelativeLayout>
