--- a/redpacketlibrary/res/layout/rp_fragment_transfer_packet.xml
+++ b/redpacketlibrary/res/layout/rp_fragment_transfer_packet.xml
@@ -1,91 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginTop="10dp"
-        android:gravity="center">
-
-        <ImageView
-            android:id="@+id/iv_transfer_icon"
-            style="@style/AvatarIconStyle"
-            android:background="@drawable/rp_bg_circular"
-            android:src="@drawable/rp_avatar"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"/>
-        <TextView
-            android:id="@+id/tv_transfer_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/text_light_grey"
-            android:layout_marginTop="5dp"
-            android:layout_gravity="center"
-            android:maxLength="22"
-            android:text=""
-            android:textSize="15sp"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/rp_ll_white_shape"
-        android:layout_margin="15dp">
-        <TextView
-            android:id="@+id/tv_transfer_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/transfer_amount"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"/>
-
         <LinearLayout
-            android:id="@+id/ll_transfer_caption"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="15dp"
-            android:orientation="horizontal">
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/iv_transfer_icon"
+                style="@style/AvatarIconStyle"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/rp_bg_circular"
+                android:src="@drawable/rp_avatar" />
+
             <TextView
+                android:id="@+id/tv_transfer_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="￥"
-                android:textSize="30sp"/>
-            <EditText
-                android:id="@+id/et_transfer_money"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:inputType="numberDecimal"
-                android:maxLength="8"
-                android:textStyle="bold"
-                android:textSize="30sp"
-                android:background="@null"/>
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:maxLength="22"
+                android:text=""
+                android:textColor="@color/text_light_grey"
+                android:textSize="15sp" />
+
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:background="@drawable/rp_ll_white_shape"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_transfer_money"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:text="@string/transfer_amount"
+                android:textColor="@color/text_black" />
+
+            <LinearLayout
+                android:id="@+id/ll_transfer_caption"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="￥"
+                    android:textColor="@color/text_black"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/et_transfer_money"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:background="@null"
+                    android:inputType="numberDecimal"
+                    android:maxLength="8"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_transfer_money"
+            style="@style/SendMoneyButtonStyle"
+            android:background="@drawable/rp_btn_blue_selector"
+            android:text="@string/transfer_money" />
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_transfer_money"
-        style="@style/SendMoneyButtonStyle"
-        android:background="@drawable/rp_btn_blue_selector"
-        android:text="@string/transfer_money"/>
-
-    </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_transfer_target"
         android:layout_width="@dimen/size180px"
         android:layout_height="@dimen/size180px"
         android:layout_centerInParent="true"
-        android:orientation="vertical"
-        />
+        android:orientation="vertical" />
 </RelativeLayout>
