--- a/redpacketlibrary/res/drawable/rp_btn_open_normal_shape_unsolid.xml
+++ b/redpacketlibrary/res/drawable/rp_btn_open_normal_shape_unsolid.xml
@@ -5,4 +5,5 @@
     <stroke
         android:width="1px"
         android:color="@color/title_color"/>
+    <solid android:color="#D24F44"/>
 </shape>
