--- a/redpacketlibrary/res/layout/rp_activity_transfer_detail.xml
+++ b/redpacketlibrary/res/layout/rp_activity_transfer_detail.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/money_bg_color">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/money_bg_color">
+
     <com.yunzhanghu.redpacketui.widget.RPTitleBar
         android:id="@+id/title_bar_transfer_detail"
         android:layout_width="match_parent"
@@ -12,103 +13,114 @@
         app:RPmytitle="@string/transfer_detail_title"
         app:RPsubTitleTextColor="@color/text_transparent_black"
         app:RPtitleBackground="@color/background_white"
-        app:RPtitleTextColor="@color/text_all_black"/>
+        app:RPtitleTextColor="@color/text_all_black" />
+
     <ImageView
         android:id="@+id/iv_transfer_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/rp_transfer_success"
-        android:scaleType="fitXY"
         android:layout_below="@id/title_bar_transfer_detail"
-        android:layout_marginTop="40dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/size120px"
+        android:background="@drawable/rp_transfer_success"
+        android:scaleType="fitXY" />
+
     <TextView
         android:id="@+id/tv_transfer_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/iv_transfer_detail"
-        android:text="@string/transfer_success"
-        android:textColor="@color/text_black"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="@dimen/size30px"
+        android:text="@string/transfer_success"
+        android:textColor="@color/text_black" />
+
     <LinearLayout
         android:id="@+id/ll_transfer_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp"
         android:layout_below="@id/tv_transfer_detail"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/size30px"
+        android:orientation="horizontal">
+
         <TextView
             android:id="@+id/tv_transfer_detail_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
             android:text="+"
             android:textColor="@color/text_black"
-            android:layout_centerHorizontal="true"
-            android:textSize="30sp"
-            android:gravity="center"/>
+            android:textSize="@dimen/font90px" />
+
         <TextView
             android:id="@+id/tv_transfer_detail_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
             android:text="100.00"
             android:textColor="@color/text_black"
-            android:layout_centerHorizontal="true"
-            android:textSize="30sp"
-            android:gravity="center"/>
+            android:textSize="@dimen/font90px" />
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/ll_transfer_detail_money"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_below="@id/ll_transfer_detail"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="@dimen/size24px"
+        android:orientation="horizontal"
         android:visibility="gone">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/transfer_change"
-            android:textColor="@color/text_light_grey"
             android:layout_centerHorizontal="true"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:text="@string/transfer_change"
+            android:textColor="@color/text_light_grey" />
+
         <TextView
             android:id="@+id/tv_transfer_detail_change"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/transfer_see_change"
             android:layout_centerHorizontal="true"
+            android:layout_marginLeft="@dimen/size15px"
             android:gravity="center"
-            android:layout_marginLeft="5dp"
-            android:textColor="@color/light_blue"/>
+            android:text="@string/transfer_see_change"
+            android:textColor="@color/light_blue" />
 
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/ll_transfer_detail_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="@dimen/size30px"
+        android:orientation="horizontal"
         android:visibility="gone">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/transfer_time"
-            android:textColor="@color/text_light_grey"
-            android:gravity="center"/>
+            android:textColor="@color/text_light_grey" />
+
         <TextView
             android:id="@+id/tv_transfer_detail_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text=""
+            android:layout_marginLeft="@dimen/size15px"
             android:gravity="center"
-            android:textColor="@color/text_light_grey"
-            android:layout_marginLeft="5dp"/>
+            android:text=""
+            android:textColor="@color/text_light_grey" />
 
     </LinearLayout>
 
