--- a/redpacketlibrary/res/layout/rp_fragment_transfer_packet.xml
+++ b/redpacketlibrary/res/layout/rp_fragment_transfer_packet.xml
@@ -11,7 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="@dimen/size30px"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -19,7 +19,7 @@
                 android:id="@+id/iv_transfer_icon"
                 style="@style/AvatarIconStyle"
                 android:layout_gravity="center"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="@dimen/size45px"
                 android:background="@drawable/rp_bg_circular"
                 android:src="@drawable/rp_avatar" />
 
@@ -28,18 +28,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/size15px"
                 android:maxLength="22"
                 android:text=""
                 android:textColor="@color/text_light_grey"
-                android:textSize="15sp" />
+                android:textSize="@dimen/font45px" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
+            android:layout_margin="@dimen/size45px"
             android:background="@drawable/rp_ll_white_shape"
             android:orientation="vertical">
 
@@ -47,8 +47,8 @@
                 android:id="@+id/tv_transfer_money"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginLeft="@dimen/size45px"
+                android:layout_marginTop="@dimen/size45px"
                 android:text="@string/transfer_amount"
                 android:textColor="@color/text_black" />
 
@@ -56,9 +56,9 @@
                 android:id="@+id/ll_transfer_caption"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginBottom="@dimen/size45px"
+                android:layout_marginLeft="@dimen/size45px"
+                android:layout_marginTop="@dimen/size15px"
                 android:orientation="horizontal">
 
                 <TextView
@@ -66,18 +66,19 @@
                     android:layout_height="wrap_content"
                     android:text="￥"
                     android:textColor="@color/text_black"
-                    android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:textSize="@dimen/font90px" />
 
                 <EditText
                     android:id="@+id/et_transfer_money"
                     android:layout_width="match_parent"
-                    android:layout_height="50dp"
+                    android:layout_height="wrap_content"
                     android:background="@null"
                     android:inputType="numberDecimal"
                     android:maxLength="8"
-                    android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:paddingBottom="@dimen/size30px"
+                    android:paddingTop="@dimen/size30px"
+                    android:text=""
+                    android:textSize="@dimen/font90px" />
             </LinearLayout>
 
 
