--- a/redpacketlibrary/res/layout/rp_open_exclusive_packet_dialog.xml
+++ b/redpacketlibrary/res/layout/rp_open_exclusive_packet_dialog.xml
@@ -103,15 +103,17 @@
 
     <TextView
         android:id="@+id/tv_exclusive_username"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/layout_exclusive_avatar"
+        android:layout_centerInParent="true"
         android:layout_marginLeft="@dimen/size60px"
         android:layout_marginRight="@dimen/size60px"
         android:layout_marginTop="@dimen/size30px"
+        android:ellipsize="end"
         android:gravity="center"
-        android:singleLine="true"
-        android:text="野原美伢"
+        android:maxEms="10"
+        android:maxLines="1"
         android:textColor="@color/money_white"
         android:textSize="@dimen/font42px"
         android:visibility="visible"
@@ -145,7 +147,7 @@
         android:layout_marginLeft="@dimen/size81px"
         android:layout_marginRight="@dimen/size81px"
         android:gravity="center"
-        android:singleLine="true"
+        android:maxLines="1"
         android:text="￥8.00"
         android:textColor="@color/title_color"
         android:textSize="@dimen/font129px"
