--- a/redpacketlibrary/res/layout/rp_received_record_list_item.xml
+++ b/redpacketlibrary/res/layout/rp_received_record_list_item.xml
@@ -29,8 +29,9 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/size45px"
             android:layout_toRightOf="@id/iv_record_avatar_icon"
-            android:maxLength="18"
-            android:singleLine="true"
+            android:ellipsize="end"
+            android:maxEms="10"
+            android:maxLines="1"
             android:textColor="@color/text_black"
             android:textSize="@dimen/font45px"
             />
@@ -73,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/tv_money_to_user"
+            android:layout_below="@id/tv_item_money_amount"
             android:layout_marginLeft="@dimen/size45px"
             android:layout_marginRight="@dimen/size45px"
             android:layout_marginTop="@dimen/size9px"
