--- a/redpacketlibrary/res/layout/rp_fragment_transfer_packet.xml
+++ b/redpacketlibrary/res/layout/rp_fragment_transfer_packet.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/size30px"
             android:gravity="center"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <ImageView
                 android:id="@+id/iv_transfer_icon"
@@ -21,18 +24,23 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="@dimen/size45px"
                 android:background="@drawable/rp_bg_circular"
-                android:src="@drawable/rp_avatar" />
+                android:src="@drawable/rp_avatar"
+                />
 
             <TextView
                 android:id="@+id/tv_transfer_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/size15px"
+                android:layout_marginRight="@dimen/size15px"
                 android:layout_marginTop="@dimen/size15px"
-                android:maxLength="22"
-                android:text=""
+                android:ellipsize="end"
+                android:maxEms="10"
+                android:maxLines="1"
                 android:textColor="@color/text_light_grey"
-                android:textSize="@dimen/font45px" />
+                android:textSize="@dimen/font45px"
+                />
 
         </LinearLayout>
 
@@ -41,7 +49,8 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/size45px"
             android:background="@drawable/rp_ll_white_shape"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:id="@+id/tv_transfer_money"
@@ -50,7 +59,8 @@
                 android:layout_marginLeft="@dimen/size45px"
                 android:layout_marginTop="@dimen/size45px"
                 android:text="@string/transfer_amount"
-                android:textColor="@color/text_black" />
+                android:textColor="@color/text_black"
+                />
 
             <LinearLayout
                 android:id="@+id/ll_transfer_caption"
@@ -59,14 +69,16 @@
                 android:layout_marginBottom="@dimen/size45px"
                 android:layout_marginLeft="@dimen/size45px"
                 android:layout_marginTop="@dimen/size15px"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="￥"
                     android:textColor="@color/text_black"
-                    android:textSize="@dimen/font90px" />
+                    android:textSize="@dimen/font90px"
+                    />
 
                 <EditText
                     android:id="@+id/et_transfer_money"
@@ -78,7 +90,8 @@
                     android:paddingBottom="@dimen/size30px"
                     android:paddingTop="@dimen/size30px"
                     android:text=""
-                    android:textSize="@dimen/font90px" />
+                    android:textSize="@dimen/font90px"
+                    />
             </LinearLayout>
 
 
@@ -88,7 +101,8 @@
             android:id="@+id/btn_transfer_money"
             style="@style/SendMoneyButtonStyle"
             android:background="@drawable/rp_btn_blue_selector"
-            android:text="@string/transfer_money" />
+            android:text="@string/transfer_money"
+            />
 
     </LinearLayout>
 
@@ -97,5 +111,6 @@
         android:layout_width="@dimen/size180px"
         android:layout_height="@dimen/size180px"
         android:layout_centerInParent="true"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        />
 </RelativeLayout>
