--- a/redpacketlibrary/res/layout/rp_received_record_list_header.xml
+++ b/redpacketlibrary/res/layout/rp_received_record_list_header.xml
@@ -1,45 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/money_white"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/money_white"
+              android:orientation="vertical"
+    >
 
     <ImageView
         android:id="@+id/iv_avatar"
         style="@style/AvatarIconStyle"
         android:background="@drawable/rp_bg_circular"
-        android:src="@drawable/rp_avatar" />
+        android:src="@drawable/rp_avatar"
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/size27px"
+        android:gravity="center"
+        >
+        <TextView
+            android:id="@+id/tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/font45px"
+            android:layout_marginTop="0dp"
+            android:maxLines="1"
+            android:maxEms="10"
+            android:ellipsize="end"
+            android:layout_gravity="center"
+            android:gravity="center"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/name_str_format_received"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/font45px"
+            />
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_username"
-        style="@style/UserNameStyle"
-        android:maxLength="18"
-        android:singleLine="true"/>
 
     <TextView
         android:id="@+id/tv_received_money_amount"
-        style="@style/ReceivedMoneyStyle" />
+        style="@style/ReceivedMoneyStyle"
+        />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/size81px"
-        android:visibility="visible">
+        android:visibility="visible"
+        >
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/size174px"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:id="@+id/tv_received_count"
-                style="@style/RecordReceivedCountStyle" />
+                style="@style/RecordReceivedCountStyle"
+                />
 
             <TextView
                 style="@style/RecordReceivedCountTextStyle"
-                android:text="@string/money_received" />
+                android:text="@string/money_received"
+                />
         </LinearLayout>
 
         <LinearLayout
@@ -47,20 +79,24 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/size174px"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <TextView
                 android:id="@+id/tv_best_count"
-                style="@style/RecordReceivedCountStyle" />
+                style="@style/RecordReceivedCountStyle"
+                />
 
             <TextView
                 style="@style/RecordReceivedCountTextStyle"
-                android:text="@string/best_count" />
+                android:text="@string/best_count"
+                />
         </LinearLayout>
     </RelativeLayout>
 
     <View
         style="@style/DividerStyle"
-        android:layout_marginTop="@dimen/size81px" />
+        android:layout_marginTop="@dimen/size81px"
+        />
 
 </LinearLayout>
