--- a/redpacketlibrary/res/layout/rp_send_record_list_header.xml
+++ b/redpacketlibrary/res/layout/rp_send_record_list_header.xml
@@ -1,55 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/money_white"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:background="@color/money_white"
+              android:orientation="vertical"
+    >
 
     <ImageView
         android:id="@+id/iv_avatar"
         style="@style/AvatarIconStyle"
         android:background="@drawable/rp_bg_circular"
-        android:src="@drawable/rp_avatar" />
+        android:src="@drawable/rp_avatar"
+        />
 
-    <TextView
-        android:id="@+id/tv_username"
-        style="@style/UserNameStyle"
-        android:maxLength="18"
-        android:singleLine="true"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/size27px"
+        android:gravity="center"
+        android:orientation="horizontal"
+        >
 
+        <TextView
+            android:id="@+id/tv_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="0dp"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxEms="10"
+            android:maxLines="1"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/font45px"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:text="@string/name_str_format_send"
+            android:textColor="@color/text_black"
+            android:textSize="@dimen/font45px"
+            />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tv_send_money_amount"
-        style="@style/ReceivedMoneyStyle" />
+        style="@style/ReceivedMoneyStyle"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        >
 
         <TextView
             style="@style/UserNameStyle"
             android:layout_marginTop="0dp"
             android:text="@string/money_send"
-            android:textColor="@color/text_light_grey" />
+            android:textColor="@color/text_light_grey"
+            />
 
         <TextView
             android:id="@+id/tv_send_money_count"
             style="@style/UserNameStyle"
             android:layout_marginTop="0dp"
-            android:textColor="@color/money_red_light" />
+            android:textColor="@color/money_red_light"
+            />
 
         <TextView
             style="@style/UserNameStyle"
             android:layout_marginTop="0dp"
             android:text="@string/count_unit"
-            android:textColor="@color/text_light_grey" />
+            android:textColor="@color/text_light_grey"
+            />
     </LinearLayout>
 
     <View
         style="@style/DividerStyle"
-        android:layout_marginTop="@dimen/size81px" />
+        android:layout_marginTop="@dimen/size81px"
+        />
 
 </LinearLayout>
